ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.2.0-rc1
    • Affects Version/s: 2.2.0-rc0
    • Component/s: Write Ops
    • None
    • Environment:
      Linux el5 x64
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Hi
      I notice that every "update" operation using the _id causes "11000:E11000 duplicate key error index" on the secondary log.

      primary:

      Tue Jul 24 09:45:17 [conn5] getmore local.oplog.rs query: { ts:

      { $gte: new Date(5766220961858716081) }

      } cursorid:7344324393376596819 ntoreturn:0 keyUpdates:0 locks(micros) r:64 nreturned:1 reslen:146 0ms
      Tue Jul 24 09:45:17 [conn2590] update r1.Attribute query:

      { _id: ObjectId('4ff62387e4b072a042eee906') }

      update: { $set:

      { typeId: 1 }

      } idhack:1 nmoved:1 nupdated:1 keyUpdates:0 locks(micros) w:385 0ms

      secondary:

      Tue Jul 24 09:45:17 [repl prefetch worker] User Assertion: 11000:E11000 duplicate key error index: r1.Attribute.$id dup key: { : ObjectId('4ff62387e4b072a042eee906') }

        1. daemon.log
          201 kB
        2. daemon.log
          201 kB

            Assignee:
            Kristina Chodorow (Inactive)
            Reporter:
            Jason Chuong
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: