Make prefetch not throw any exceptions SERVER-6589